--- a/index.html
+++ b/index.html
@@ -8,11 +8,21 @@
 </head>
 <body>
   <script type="text/template" id="counts-template">
-    <h2>Stuff</h2>
+    <h2>LEAP Survey Progress Tracker</h2>
 
-    <% _.each(areas, function(area, name) {%>
-        <% name %> <% area.done %> <% areas.total %>
-    <% }); %>
+    <table>
+      <tr>
+        <th>Area type</th>
+        <th>Completed</th>
+        <th>Needed</th>
+      </tr>
+      <% _.each(areas, function(area, name) {%>
+        <tr>
+          <td><%= name %></td>
+          <td><%= area %></td>
+        </tr>
+      <% }); %>
+    </table>
   </script>
 
   <script src="http://underscorejs.org/underscore-min.js"></script>
@@ -41,7 +51,7 @@
     var url = 'https://app.localdata.com/api/surveys/788015f0-c0c4-11e3-906d-a3595d61b555/stats';
     var counts = {};
     console.log(data);
-    var template = _.template($('#counts-template'));
+    var template = _.template($('#counts-template').html());
 
     var getdata = function(polygon, name) {
       var query = url + '?intersects=' + encodeURIComponent(JSON.stringify(polygon));
@@ -58,9 +68,13 @@
             counts[name] = v;
           }
           console.log(counts);
+          $('body').html(template({
+            areas: counts
+          }));
 
 
         });
+        console.log("WORKS!", name, polygon);
 
       }).fail(function(error) {
         console.log("ERROR!", name);
@@ -82,6 +96,7 @@
           if (shape.length !== 1) {
             shape = [shape];
           }
+
           var polygon = {
             type: 'Polygon',
             coordinates: shape
